[tool.poetry]
name = "kata-number-to-french-converter"
version = "0.1.0"
description = ""
authors = ["ajosegun <ajoseolusegun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
